--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -21,7 +21,8 @@
     </properties> 
 
     <build>
-        <sourceDirectory>.</sourceDirectory>      
+        <sourceDirectory>./src</sourceDirectory>     
+        <testSourceDirectory>.</testSourceDirectory>
     
         <resources>      
             <resource>
@@ -32,7 +33,7 @@
         <plugins>
        	      <plugin>
 		 <artifactId>maven-clean-plugin</artifactId>
-		 <version>2.6</version>
+		 <version>3.1.0</version>
 		 <configuration>
 		   <filesets>
 		     <fileset>
