--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -54,7 +54,7 @@
                 </configuration>
             </plugin>
             
-            <plugin>
+<!--            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version> 
@@ -66,7 +66,7 @@
                             <goal>install-node-and-npm</goal>
                         </goals>
                         <configuration>
-                            <!-- See https://nodejs.org/en/download/ for latest node and npm (lts) versions -->                             
+                             See https://nodejs.org/en/download/ for latest node and npm (lts) versions                              
                             <nodeVersion>v10.5.0</nodeVersion>
                             <npmVersion>6.1.0</npmVersion> 
                         </configuration>
@@ -77,13 +77,13 @@
                         <goals>
                             <goal>npm</goal>
                         </goals>
-                        <!-- Optional configuration which provides for running any npm command -->
+                         Optional configuration which provides for running any npm command 
                         <configuration>
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
 
-<!--                    <execution>
+                    <execution>
                         <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
@@ -91,9 +91,9 @@
                         <configuration>
                             <arguments>run build</arguments>
                         </configuration>
-                    </execution>      -->
+                    </execution>      
                 </executions> 
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
