--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -18,6 +18,7 @@
         <main.basedir>${project.parent.basedir}</main.basedir>
         <checkstyle.skip>true</checkstyle.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <argLine>-XX:MaxMetaspaceSize=256m</argLine>
     </properties> 
 
     <build>
@@ -54,7 +55,7 @@
                 <configuration>
                     <fork>true</fork>
                     <meminitial>128m</meminitial>
-                    <maxmem>512m</maxmem>
+                    <maxmem>512m</maxmem>  
                     <compilerArgs>
                         <arg>-XX:MaxPermSize=256m</arg>
                         <arg>-XX:MaxMetaspaceSize=256m</arg>
@@ -70,7 +71,7 @@
                     <fork>true</fork>
                     <meminitial>128m</meminitial>
                     <maxmem>512m</maxmem>
-                    <compilerArgs>
+                    <compilerArgs> 
                         <arg>-XX:MaxPermSize=256m</arg>
                         <arg>-XX:MaxMetaspaceSize=256m</arg>
                     </compilerArgs>
