--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,8 +18,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <!--<skipTests>true</skipTests>-->
-        <!--        <failIfNoTests>true</failIfNoTests>-->
-    </properties>    
+        <!-- <failIfNoTests>true</failIfNoTests>--> 
+        <spring.profiles.active>${SPRING_PROFILES_ACTIVE}</spring.profiles.active>         
+    </properties>     
+    
 
     <dependencies>        
         <dependency>
@@ -102,7 +104,8 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <build>  
+        
         <plugins> 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -134,7 +137,8 @@
         </plugins>
     </build>
     
-    <profiles>
+<!--    
+    <profiles>        
         <profile>
             <id>production</id> 
             <build>
@@ -179,9 +183,6 @@
         </profile>
         <profile>
             <id>development</id>
-            <properties>
-                <spring.profiles.active>development</spring.profiles.active>
-            </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -266,5 +267,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles>-->
 </project>
