--- a/backend/src/main/resources/application-development.properties
+++ b/backend/src/main/resources/application-development.properties
@@ -1,51 +1,18 @@
-application.name=Heritage Innovative Solutions App Developement 
+spring.application.name=Heritage Innovative Solutions App Developement 
 
-jwt.secret= chitova
-jwt.header=Authorization
-jwt.expiration=604800
-jwt.route.controller.path=/jwtauth
-jwt.route.authentication.path=/auth
-jwt.route.authentication.refresh=/refresh
-
-#upload directory for server
-server.upload.dir=upload-dir
-
-#management.security.enabled=true
-#security.basic.enabled=false
-#spring.resources.chain.enabled=true 
-
-spring.mvc.view.prefix= /WEB-INF/jsp/
-spring.mvc.view.suffix= .jsp
-#spring.mvc.view.prefix= /
-#spring.mvc.view.suffix= .html
-server.port = 8080
+server.port = 8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hisolutions_dev
 spring.datasource.username=root
 spring.datasource.password=root
 ##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
-
-spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.max-active=50
-spring.datasource.tomcat.max-idle=20
-spring.datasource.tomcat.min-idle=15
- 
+  
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.show_sql = true
 #spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
 
-
-# MULTIPART (MultipartProperties)
-spring.http.multipart.enabled=true 
-# Enable support of multi-part uploads.
-# spring.http.multipart.file-size-threshold=3 # Threshold after which files will be written to disk. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-spring.http.multipart.location= /home/denzil/apache-tomcat-8/document_store
-# Intermediate location of uploaded files.
-spring.http.multipart.max-file-size=10MB
-# Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-spring.http.multipart.max-request-size=10MB
-# Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-spring.http.multipart.resolve-lazily=false 
-# Whether to resolve the multipart request lazily at the time of file or parameter access.
+#upload directory for development
+server.upload.dir=/home/dgumbo/upload-dir
+# server.upload.
