--- a/backend/src/main/resources/application-production.properties
+++ b/backend/src/main/resources/application-production.properties
@@ -1,46 +1,13 @@
-application.name=Heritage Innovative Solutions Web Application Production 
-
-jwt.secret=chitova
-jwt.header=Authorization
-jwt.expiration=604800
-jwt.route.controller.path=/jwtauth
-jwt.route.authentication.path=/auth
-jwt.route.authentication.refresh=/refresh
-
-#upload directory for server
-server.upload.dir=/home/his/upload-dir
-
-aws.region=${AWS_REGION}
-aws.s3.bucket.name=${AWS_S3_BUCKET_NAME} 
-aws.access.key.id=${AWS_ACCESS_KEY_ID} 
-aws.secret.access.key=${AWS_SECRET_ACCESS_KEY} 
-#server.upload.dir=upload-dir
-
-#management.security.enabled=true
-#security.basic.enabled=false
-#spring.resources.chain.enabled=true 
-
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix= .jsp
-#spring.mvc.view.prefix= /
-#spring.mvc.view.suffix= .html
+spring.application.name=Heritage Innovative Solutions Web Application Production  
+ 
 server.port = 8080
 
 ### AWS Database Connection Settings ###
 spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
 spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
-spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD} 
-#HISOLUTIONS_MYSQL_DB_HOST="jdbc:mysql://his*****ns-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hi*******nsdb"
-#HISOLUTIONS_MYSQL_DB_USERNAME="r***t"
-#HISOLUTIONS_MYSQL_DB_PASSWORD="S******01"
-
+spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD}   
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect 
 ### End AWS Database Connection Settings ### 
-
-spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.max-active=50
-spring.datasource.tomcat.max-idle=20
-spring.datasource.tomcat.min-idle=15
  
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.show_sql = true
@@ -48,16 +15,5 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
 
-
-# MULTIPART (MultipartProperties)
-spring.http.multipart.enabled=true 
-# Enable support of multi-part uploads.
-# spring.http.multipart.file-size-threshold=3 # Threshold after which files will be written to disk. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-spring.http.multipart.location=/home/his/upload-dir
-# Intermediate location of uploaded files.
-spring.http.multipart.max-file-size=10MB
-# Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-spring.http.multipart.max-request-size=10MB
-# Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-spring.http.multipart.resolve-lazily=false 
-# Whether to resolve the multipart request lazily at the time of file or parameter access.
+aws.region=${AWS_REGION}
+aws.s3.bucket.name=${AWS_S3_BUCKET_NAME}
