--- a/backend/src/main/resources/application-production.properties
+++ b/backend/src/main/resources/application-production.properties
@@ -6,7 +6,7 @@ server.port = 8080
 spring.datasource.url= ${HISOLUTIONS_MYSQL_DB_HOST}
 spring.datasource.username= ${HISOLUTIONS_MYSQL_DB_USERNAME}
 spring.datasource.password= ${HISOLUTIONS_MYSQL_DB_PASSWORD}   
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect 
 ### End AWS Database Connection Settings ### 
  
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
