--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,22 @@
             <scope>test</scope>
         </dependency>
 
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId> 
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>  
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
  
 
