--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -6,6 +6,17 @@ server.port=8080
 #spring.datasource.driverClassName=${HISOLUTIONS_DB_DRIVER}com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
   
+###  Database Connection Settings ### 
+
+spring.datasource.url=${HISOLUTIONS_DB_HOST}
+spring.datasource.username=${HISOLUTIONS_DB_USERNAME}
+spring.datasource.password=${HISOLUTIONS_DB_PASSWORD}    
+#spring.jpa.properties.hibernate.dialect=${HISOLUTIONS_DB_DIALECT} 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+### End Database Connection Settings ### 
+
+
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql = true
