--- a/pom.xml
+++ b/pom.xml
@@ -107,12 +107,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId> 
             <!--<version>1.4.197</version>-->
-        </dependency>
+        </dependency> 
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>  
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.0.0.jre8</version>
             <type>jar</type>
-            <scope>test</scope>
         </dependency>
         
     </dependencies>
